--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     <item android:id="@+id/home"
         android:title="@string/home"
         />
-    <item android:id="@+id/profile"
+    <item android:id="@+id/profile_layout"
 
         android:title="@string/profile" />
 
